@@ -1,3 +1,9 @@
+2002-09-24  Bastien Nocera  <hadess@hadess.net>
+
+	* autogen.sh: exit if aclocal-1.4 fails to run without warnings
+	Usually compilation would fail afterwards with funky errors.
+	Branched to gnome-2-0
+
 2002-08-18  Havoc Pennington  <hp@pobox.com>
 
 	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
